4.ecs-fargate-nginx-flask-db/infra/3-security-groups.tf
# Traffic to/from internet to/from ALB
resource "aws_security_group" "alb_security_group" {
  name        = "lb-security-group"
  description = "Allow SSH and Web traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow Web"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "All egress traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Traffic to ECS cluster should only come from ALB
resource "aws_security_group" "ecs_task_sg" {
  name        = "ecs-task-security-group"
  description = "Allow inbound access from ALB only"
  vpc_id      = aws_vpc.main.id

  ingress {
    protocol        = "tcp"
    from_port       = 80
    to_port         = 80
    security_groups = [aws_security_group.alb_security_group.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
